--- a/computervision-new/app.json
+++ b/computervision-new/app.json
@@ -11,8 +11,9 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-      "NSMicrophoneUsageDescription": "Appen trenger mikrofon for å øve norsk tale."
-    }
+        "NSMicrophoneUsageDescription": "Appen trenger mikrofon for å øve norsk tale."
+      },
+      "bundleIdentifier": "com.anonymous.computervisionnew"
     },
     "android": {
       "adaptiveIcon": {
@@ -21,9 +22,13 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
-      "permissions": ["RECORD_AUDIO"],
+      "permissions": [
+        "RECORD_AUDIO",
+        "RECORD_AUDIO"
+      ],
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.computervisionnew"
     },
     "web": {
       "output": "static",
@@ -42,7 +47,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "onnxruntime-react-native"
     ],
     "experiments": {
       "typedRoutes": true,
