--- a/computervision-new/package.json
+++ b/computervision-new/package.json
@@ -12,32 +12,32 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@vitalets/google-translate-api": "^9.2.1",
     "base-64": "^1.0.0",
-    "expo": "~54.0.8",
+    "expo": "54.0.19",
     "expo-av": "~16.0.7",
     "expo-camera": "~17.0.8",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.10",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.10",
     "expo-image-manipulator": "~14.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.6",
+    "expo-router": "~6.0.13",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.7",
     "onnxruntime-react-native": "^1.23.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
